<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_alarms"
        android:icon="@drawable/ic_alarm"
        android:title="@string/nav_alarms" />
    <item
        android:id="@+id/nav_world_clock"
        android:icon="@drawable/ic_world_clock"
        android:title="@string/nav_world_clock" />
    <item
        android:id="@+id/nav_stopwatch"
        android:icon="@drawable/ic_stopwatch"
        android:title="@string/nav_stopwatch" />
    <item
        android:id="@+id/nav_timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/nav_timer" />
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/nav_stats" />
</menu>
